<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dip"
            android:background="@drawable/title_back"
            android:contentDescription="@string/title_back_description" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_title"
            android:textColor="#fff"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/title_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dip"
            android:background="@drawable/title_add"
            android:contentDescription="@string/title_add_description" />

        <ImageView
            android:id="@+id/title_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dip"
            android:background="@drawable/title_refresh"
            android:contentDescription="@string/title_refresh_description" />
    </LinearLayout>
    

    <ListView
        android:id="@+id/target_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>